<resources>
    <string name="gamefootball">Football</string>
    <string name="gamecornhole">Cornhole</string>
    <string name="gamevolleyball">Volleyball</string>
    <string name="gamekickball">Kickball</string>
    <string name="settingTeam1Color">Team 1 Color</string>
    <string name="settingTeam2Color">Team 2 Color</string>
    <string name="addone">+1</string>
    <string name="addtwo">+2</string>
    <string name="addthree">+3</string>
    <string name="addfour">+4</string>
    <string name="addfive">+5</string>
    <string name="addsix">+6</string>
    <string name="addseven">+7</string>
    <string name="addeight">+8</string>
    <string name="addnine">+9</string>
    <string name="addten">+10</string>
    <string name="addeleven">+11</string>
    <string name="addtweleve">+12</string>
    <string name="subone">-1</string>
    <string name="subtwo">-2</string>
    <string name="subthree">-3</string>
    <string name="subfour">-4</string>
    <string name="subfive">-5</string>
    <string name="subsix">-6</string>
    <string name="subseven">-7</string>
    <string name="subeight">-8</string>
    <string name="subnine">-9</string>
    <string name="subten">-10</string>
    <string name="subeleven">-11</string>
    <string name="subtweleve">-12</string>
    <string name="touchdown">Touchdown</string>
    <string name="extrapoint">Extra Point</string>
    <string name="removetouchdown">Remove Touchdown</string>
    <string name="removeextrapoint">Remove Extra Point</string>
    <string name="cornhole_wentover">Went Over 21</string>
    <string name="resetscores">Reset Scores</string>
    <string name="returntogameselect">Return to Game Selection</string>
    <string name="controlling_sectiontitle_games">Games</string>
    <string name="team_score_format">%d</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="device_connected">CONNECTED</string>
    <string name="device_disconnected">DISCONNECTED</string>
    <string name="ble_device_key">askljdgjKLSDGJlKJSgdlkd</string>
    <string name="agm_key">KLAFDJGkljasdglJASFLDFKSJFLKASDJGK</string>
    <string name="bluetooth_unsupported">This device doesn\'t support Bluetooth Low Energy</string>
    <string name="bluetooth_notauthorized">This app is not authorized to use the Bluetooth Low Energy</string>
    <string name="bluetooth_poweredoff">Bluetooth is currently powered off</string>
    <string name="bluetooth_locationpermission_disabled_text">Location Services should be enabled to scan bluetooth peripherals.\nPlease, go to settings and enable it to start scanning peripherals</string>
    <string name="bluetooth_locationpermission_title">This app needs location access</string>
    <string name="bluetooth_locationpermission_text">Please grant location access so this app can scan for Bluetooth peripherals</string>
    <string name="bluetooth_locationpermission_notavailable_title">Bluetooth Scanning not available</string>
    <string name="bluetooth_locationpermission_notavailable_text">Since location access has not been granted, the app will not be able to scan for Bluetooth peripherals</string>
    <string name="bluetooth_scanner_errorregisteringapp">App cannot be registered for bluetooth scanning.\nPlease reset bluetooth and try again.</string>
    <string name="bluetooth_connecting_error">Error connecting to peripheral</string>
    <string name="bluetooth_advertising_start_error">Error starting advertising</string>
    <string name="main_tabbar_singlemode">Select Device</string>
    <string name="main_tabbar_centralmode">Central Mode</string>
    <string name="main_tabbar_peripheralmode">Peripheral Mode</string>
    <string name="scanner_title">Peripherals</string>
    <string name="scanner_backbutton">Disconnect</string>
    <string name="scanner_splitmasterbutton">Peripheral List</string>
    <string name="scanner_subtitle">Peripherals found</string>
    <string name="scanner_uartavailable">Uart capable</string>
    <string name="scanner_beacon">Beacon</string>
    <string name="scanner_uribeacon">Uri-Beacon</string>
    <string name="scanner_notconnectable">Not Connectable</string>
    <string name="scanner_peripheraldisconnected">Peripheral disconnected</string>
    <string name="scanner_unnamed">&lt;Unknown&gt;</string>
    <string name="scanner_connect">Connect</string>
    <string name="scanner_disconnect">Disconnect</string>
    <string name="scanner_filter_name_title">Name:</string>
    <string name="scanner_filter_name_hint">Filter by name</string>
    <string name="scanner_filter_rssi_title">RSSI &gt;=</string>
    <string name="scanner_filter_rssi_description_format" formatted="false">RSSI &gt;= %d</string>
    <string name="scanner_filter_unnamed_title">Show unnamed devices</string>
    <string name="scanner_filter_unnamed_description">with name</string>
    <string name="scanner_filter_uart_title">Must have UART Service</string>
    <string name="scanner_filter_uart_description">with UART</string>
    <string name="scanner_filter_name_matchsection">Match</string>
    <string name="scanner_filter_name_casesection">Case sensitivity</string>
    <string name="scanner_filter_currentfilter_format" formatted="false">Filter: %s</string>
    <string name="scanner_filter_nofilter">No filter selected</string>
    <string name="scanner_filter_rssivalue_format" formatted="false">%d dBm</string>
    <string name="scanner_filter_name_settings_contains">Name contains</string>
    <string name="scanner_filter_name_settings_exact">Name equals</string>
    <string name="scanner_filter_name_settings_sensitive">Matching case</string>
    <string name="scanner_filter_name_settings_insensitive">Ignoring case</string>
    <string name="scanner_filteredoutinfo_single_format" formatted="false">%d peripheral filtered out</string>
    <string name="scanner_filteredoutinfo_multiple_format" formatted="false">%d peripherals filtered out</string>
    <string name="scanresult_connect">Connect</string>
    <string name="scanresult_disconnect">Disconnect</string>
    <string name="scanresult_advertisement_viewrawdata">View Raw Data</string>
    <string name="scanresult_advertisement_rawdata_title">Advertising Raw Data</string>
    <string name="scanresult_advertisement_localname">Local name</string>
    <string name="scanresult_advertisement_address">Address</string>
    <string name="scanresult_advertisement_manufacturer">Manufacturer</string>
    <string name="scanresult_advertisement_services">Services</string>
    <string name="scanresult_advertisement_servicesuuids">Services UUIDs</string>
    <string name="scanresult_advertisement_overflowservices">Overflow services</string>
    <string name="scanresult_advertisement_servicesdata">Services data</string>
    <string name="scanresult_advertisement_servicesdata_uuid">UUID</string>
    <string name="scanresult_advertisement_servicesdata_data">Data</string>
    <string name="scanresult_advertisement_servicessolicited">Services solicited</string>
    <string name="scanresult_advertisement_connectable">Connectable</string>
    <string name="scanresult_advertisement_connectable_true">true</string>
    <string name="scanresult_advertisement_connectable_false">false</string>
    <string name="scanresult_advertisement_connectable_unknown">unknown</string>
    <string name="scanresult_advertisement_datapacket">Advertising packet data</string>
    <string name="scanresult_advertisement_txpower">TX Power Level</string>
    <string name="scanresult_advertisement_uribeacon_uri">Uri</string>
    <string name="scanresult_advertisement_beacon_uuid">UUID</string>
    <string name="scanresult_advertisement_beacon_major">Major</string>
    <string name="scanresult_advertisement_beacon_minor">Minor</string>
    <string name="multiconnect_title">Multiple UART mode</string>
    <string name="multiconnect_connecteddevices_single_format" formatted="false">Connected to %d device</string>
    <string name="multiconnect_connecteddevices_multiple_format" formatted="false">Connected to %d devices</string>
    <string name="multiconnect_start_action">Start</string>
    <string name="peripheral_advertisinginfo">Advertising Info</string>
    <string name="peripheral_localname">Local Name</string>
    <string name="peripheral_services">Services</string>
    <string name="peripheral_characteristics">Characteristics</string>
    <string name="peripheral_unknown_title">Undefined Peripheral</string>
    <string name="peripheral_dis_title">Device Information Service</string>
    <string name="peripheral_uart_title">UART</string>
    <string name="peripheral_notsupported">Peripheral mode is not supported on your device</string>
    <string name="peripheral_advertising_starterror_undefined">Peripheral mode can\'t not be started</string>
    <string name="peripheral_advertising_starterror_toolarge">Peripheral mode can\'t not be started: Advertising data too large</string>
    <string name="peripheral_dis_manufacturer">Manufacturer</string>
    <string name="peripheral_dis_modelnumber">Model Number</string>
    <string name="peripheral_dis_serialnumber">Serial Number</string>
    <string name="peripheral_dis_hardwarenumber">Hardware Number</string>
    <string name="peripheral_dis_firmwarerevision">Firmware Revision</string>
    <string name="peripheral_dis_softwarerevision">Software Revision</string>
    <string name="autoupdate_title">Update available</string>
    <string name="autoupdate_description_format" formatted="false">Software version %s is available</string>
    <string name="autoupdate_update">Go to updates</string>
    <string name="autoupdate_startupdate">Start update</string>
    <string name="autoupdate_later">Ask later</string>
    <string name="autoupdate_ignore">Ignore</string>
    <string name="peripheraldetails_select">Connect to a peripheral from the list on the left</string>
    <string name="peripheraldetails_connecting">Connecting&#8230;</string>
    <string name="peripheraldetails_discoveringservices">Discovering services&#8230;</string>
    <string name="peripheraldetails_errordiscoveringservices">Error discovering peripheral services</string>
    <string name="peripheraldetails_checkingupdates">Checking updates&#8230;</string>
    <string name="peripheralmodules_title">Modules</string>
    <string name="peripheralmodules_sectiontitle_device_single">Device</string>
    <string name="peripheralmodules_sectiontitle_device_multiconnect">Multiple Devices</string>
    <string name="peripheralmodules_sectiontitle_modules">Modules</string>
    <string name="peripheralmodules_rssi_format" formatted="false">%d dBm</string>
    <string name="peripheralmodules_rssi_unavailable">not available</string>
    <string name="peripheralmodules_battery_format" formatted="false">%d%%</string>
    <string name="info_tab_title">Info</string>
    <string name="info_navigation_title_format" formatted="false">Info - %s</string>
    <string name="info_type_service">Service</string>
    <string name="info_type_characteristic">Characteristic</string>
    <string name="info_type_descriptor">Descriptor</string>
</resources>