<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controlling"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/teamdisplay"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="40sp"
            android:layout_weight="1"
            android:text="Team1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="40sp"
            android:layout_weight="1"
            android:text="Team2" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/scoredisplay"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teamdisplay"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight ="5dp"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/Team1Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="40sp"
                android:text="@string/addone" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp">

            <TextView
                android:id="@+id/Team2Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="40sp"
                android:text="@string/addtwo" />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/scoreaddition1"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoredisplay"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight ="5dp"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/CH_Plus1Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addone" />

            <Button
                android:id="@+id/CH_Plus2Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addtwo" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp">
            <Button
                android:id="@+id/CH_Plus1Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addone" />

            <Button
                android:id="@+id/CH_Plus2Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addtwo" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreaddition2"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreaddition1"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight ="5dp"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/CH_Plus3Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addthree" />

            <Button
                android:id="@+id/CH_Plus4Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addfour" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp">
            <Button
                android:id="@+id/CH_Plus3Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addthree" />

            <Button
                android:id="@+id/CH_Plus4Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addfour" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreaddition3"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreaddition2"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight ="5dp"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/CH_Plus5Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addfive" />

            <Button
                android:id="@+id/CH_Plus6Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addsix" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp">
            <Button
                android:id="@+id/CH_Plus5Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addfive" />

            <Button
                android:id="@+id/CH_Plus6Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addsix" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreaddition4"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreaddition3"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight ="5dp"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/CH_Plus7Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addseven" />

            <Button
                android:id="@+id/CH_Plus8Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addeight" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp">
            <Button
                android:id="@+id/CH_Plus7Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addseven" />

            <Button
                android:id="@+id/CH_Plus8Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addeight" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreaddition5"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreaddition4"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight ="5dp"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/CH_Plus9Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addnine" />

            <Button
                android:id="@+id/CH_Plus10Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addten" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp">
            <Button
                android:id="@+id/CH_Plus9Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addnine" />

            <Button
                android:id="@+id/CH_Plus10Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addten" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreaddition6"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreaddition5"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight ="5dp"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/CH_Plus11Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addeleven" />

            <Button
                android:id="@+id/CH_Plus12Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addtweleve" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp">
            <Button
                android:id="@+id/CH_Plus11Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addeleven" />

            <Button
                android:id="@+id/CH_Plus12Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/addtweleve" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoresubtraction1"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoreaddition6"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight ="5dp"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/CH_Sub1Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subone" />

            <Button
                android:id="@+id/CH_Sub2Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtwo" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp">
            <Button
                android:id="@+id/CH_Sub1Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subone" />

            <Button
                android:id="@+id/CH_Sub2Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/subtwo" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreover21"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/scoresubtraction1"
        android:layout_marginTop="25dp">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight ="5dp"
            android:layout_marginTop="0dp">

            <Button
                android:id="@+id/CH_Over21Team1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cornhole_wentover" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp">
            <Button
                android:id="@+id/CH_Over21Team2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cornhole_wentover" />
        </LinearLayout>

    </LinearLayout>



    <Button
        android:id="@+id/CH_resetscores"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/scoreover21"
        android:layout_marginTop="25dp"
        android:text="@string/resetscores" />

</RelativeLayout>